--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "spatie/laravel-permission": "^6.18",
+        "yajra/laravel-datatables-oracle": "^12.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
